--- a/index.html
+++ b/index.html
@@ -147,4 +147,5 @@
             <h2 style="margin-top:0">${titulo}</h2>
             <p>${texto}</p>
             <div class="meter-container"><div class="meter-fill" style="width: ${porcentajeBarra}; background: ${colorBarra};"></div></div>
-            <div class="debug-info">LeicEcho Engine V2.3 | Escala: x${scaleFactor} | Ratio: ${ratio
+            <div class="debug-info">Leicecho Engine V2.3 | Escala: x${scaleFactor} | Ratio: ${ratio
+
